[gd_scene load_steps=13 format=3 uid="uid://bbsepv8kki1qs"]

[ext_resource type="Texture2D" uid="uid://cbgtl3mvtxklc" path="res://assets/bg/kitchen.jpg" id="1_dstpv"]
[ext_resource type="Script" path="res://Scene_script/EatFood.gd" id="1_yxatn"]
[ext_resource type="Texture2D" uid="uid://cr8kswhuhnoct" path="res://assets/icon/kitchen2.png" id="3_85i46"]
[ext_resource type="Texture2D" uid="uid://cac4o0n45wve6" path="res://assets/icon/Icon_ArrowLeft.png" id="3_ki2vi"]
[ext_resource type="Texture2D" uid="uid://dhln485mu7shu" path="res://assets/icon/bedroom2.png" id="4_2k5ae"]
[ext_resource type="Texture2D" uid="uid://vqwuut8r8fin" path="res://assets/icon/toilet2.png" id="5_iu08b"]
[ext_resource type="AudioStream" uid="uid://dy45kvlqp3q3f" path="res://SFX/incorrect.mp3" id="7_nbl0i"]
[ext_resource type="AudioStream" uid="uid://baikfsfbpwf4k" path="res://SFX/correct.mp3" id="8_isi3g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_500bs"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u80pi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bju5h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wab2x"]

[node name="EatFood" type="Control" node_paths=PackedStringArray("PressSFX", "CorrectSFX", "IncorrectSFX")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yxatn")
PressSFX = NodePath("press")
CorrectSFX = NodePath("correct")
IncorrectSFX = NodePath("incorrect")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_dstpv")
expand_mode = 1

[node name="kitchen" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 460.0
offset_right = 425.0
offset_bottom = 626.0
theme_override_styles/normal = SubResource("StyleBoxFlat_500bs")
icon = ExtResource("3_85i46")
flat = true
icon_alignment = 1
expand_icon = true

[node name="bedroom" type="Button" parent="."]
layout_mode = 0
offset_left = 454.0
offset_top = 488.0
offset_right = 764.0
offset_bottom = 648.0
theme_override_styles/normal = SubResource("StyleBoxFlat_u80pi")
text = "
"
icon = ExtResource("4_2k5ae")
flat = true
expand_icon = true

[node name="toilet" type="Button" parent="."]
layout_mode = 0
offset_left = 764.0
offset_top = 427.0
offset_right = 1124.0
offset_bottom = 640.0
theme_override_styles/normal = SubResource("StyleBoxFlat_bju5h")
icon = ExtResource("5_iu08b")
flat = true
expand_icon = true

[node name="goback" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 30.0
offset_right = 128.0
offset_bottom = 121.0
theme_override_styles/normal = SubResource("StyleBoxFlat_wab2x")
icon = ExtResource("3_ki2vi")
flat = true
expand_icon = true

[node name="press" type="AudioStreamPlayer2D" parent="."]

[node name="incorrect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_nbl0i")

[node name="correct" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_isi3g")

[connection signal="pressed" from="kitchen" to="." method="_on_button_pressed"]
[connection signal="pressed" from="bedroom" to="." method="_on_bedroom_pressed"]
[connection signal="pressed" from="toilet" to="." method="_on_toilet_pressed"]
[connection signal="pressed" from="goback" to="." method="_on_goback_pressed"]
